--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ DB_HOST=DESKTOP-75HF6R4
 DB_USER=user1
 DB_PASS=12345
 DB_NAME=hris
+
+#JWT
+
+JWT_SECRET_KEY=Mm4gang-secret-keyS
+
+JWT_EXPIRED=300000
+
+JWT_ALGORITHM=HS256
